touching up README.md file paths and testing code through css validator W3C

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Sigtuna, Sweden, City, Guide">
     <style media="screen"></style>
     <link rel="stylesheet" media href="./assets/css/style.css">
-    <title>Sigtuna Swedens oldest city</title>
+    <title>Sigtuna Swedens Oldest City</title>
 
 </head>
 <header>
@@ -53,7 +53,7 @@
             the rest of the country as well. See the google maps icon below to see where Sigtuna is located!</h4>
     </div>
     <div>
-        <img id="homepage-image" src="assets/css/images/Sigtuna överblick.jpg" alt="A overview of Sigtuna">
+        <img id="homepage-image" src="assets/images/Sigtuna överblick.jpg" alt="A overview of Sigtuna">
     </div>
 
 </section>
