--- a/gallery.html
+++ b/gallery.html
@@ -31,14 +31,14 @@
         </nav>
     </header>
     <section id="photos">
-        <img src="assets/css/images/Ruin 1.jpg" alt="An old monastery ruin located in Sigtuna">
-        <img src="assets/css/images/Mariakyrkan.jpg" alt="Red christian church placed close to the town hall ">
-        <img src="assets/css/images/Klocktornet 2.jpg" alt="Old clocktower used to call for mass">
-        <img src="assets/css/images/Runsten 3.jpg" alt="Runic stone describing the person it was raised to">
-        <img src="assets/css/images/ruin 2.jpg" alt="Old monastery located on the cemetary grounds in Sigtuna">
-        <img src="assets/css/images/Runsten Sigtuna 1.jpg" alt="Runic stone placed close to a park">
-        <img src="assets/css/images/Stranpromenaden Stenar.jpg" alt="A Circle of small runic stones close to the lake">
-        <img src="assets/css/images/Översikt Sigtuna karta.jpg" alt="Overview of Sigtuna on the map">
+        <img src="assets/images/Ruin 1.jpg" alt="An old monastery ruin located in Sigtuna">
+        <img src="assets/images/Mariakyrkan.jpg" alt="Red christian church placed close to the town hall ">
+        <img src="assets/images/Klocktornet 2.jpg" alt="Old clocktower used to call for mass">
+        <img src="assets/images/Runsten 3.jpg" alt="Runic stone describing the person it was raised to">
+        <img src="assets/images/ruin 2.jpg" alt="Old monastery located on the cemetary grounds in Sigtuna">
+        <img src="assets/images/Runsten Sigtuna 1.jpg" alt="Runic stone placed close to a park">
+        <img src="assets/images/Stranpromenaden Stenar.jpg" alt="A Circle of small runic stones close to the lake">
+        <img src="assets/images/Översikt Sigtuna karta.jpg" alt="Overview of Sigtuna on the map">
     </section>
     <footer>
 
