adding hamburger menu for nav menu in top right corner

--- a/index.html
+++ b/index.html
@@ -17,22 +17,27 @@
         <a href="index.html">
             <h1 id="logo">Sigtuna Swedens Oldest City</h1>
         </a>
-        <div>
-            <nav>
-                <ul id="menu">
-                    <li>
-                        <a class="active" style="order: 3" href="signup.html">Contact</a>
-                    </li>
+        <section class="top-nav">
+            <div>
+                <input id="menu-toggle" type="checkbox" />
+                <label class="menu-button-container" for="menu-toggle">
+                    <div class="menu-button"></div>
+                </label>
+                <nav>
+                    <ul id="menu">
+                        <li>
+                            <a class="active" style="order: 3" href="signup.html">Contact</a>
+                        </li>
 
-                    <li>
-                        <a style="order: 2" href="gallery.html">Gallery</a>
-                    </li>
-                    <li>
-                        <a style="order: 1" href="index.html">Home</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+                        <li>
+                            <a style="order: 2" href="gallery.html">Gallery</a>
+                        </li>
+                        <li>
+                            <a style="order: 1" href="index.html">Home</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </section>
 </header>
 <section id="home-text">
