adding hamburger menu for navbar and adding gridview for event table

--- a/index.html
+++ b/index.html
@@ -9,20 +9,16 @@
     <style media="screen"></style>
     <link rel="stylesheet" media href="./assets/css/style.css">
     <title>Sigtuna Swedens Oldest City</title>
-
 </head>
-<header>
 
-    <body class="flex-container">
-        <a href="index.html">
-            <h1 id="logo">Sigtuna Swedens Oldest City</h1>
-        </a>
-        <section class="top-nav">
+<body class="flex-container">
+    <section class="top-nav">
+        <header>
+            <input id="menu-toggle" type="checkbox" />
+            <label class="menu-button-container" for="menu-toggle">
+                <div class="menu-button"></div>
+            </label>
             <div>
-                <input id="menu-toggle" type="checkbox" />
-                <label class="menu-button-container" for="menu-toggle">
-                    <div class="menu-button"></div>
-                </label>
                 <nav>
                     <ul id="menu">
                         <li>
@@ -38,61 +34,68 @@
                     </ul>
                 </nav>
             </div>
-        </section>
-</header>
-<section id="home-text">
-    <div>
+    </section>
+    <a href="index.html">
+        <h1 id="logo">Sigtuna Swedens Oldest City</h1>
+    </a>
+    </header>
+    <section id="home-text">
+        <div>
 
-    </div>
-    <div class="flex-container">
-        <h2>This website can be used as your personal guide through Sigtuna. Find your point of interest and take it
-            from there!</h2>
-    </div>
-    <div>
-        <h3>The city is located slightly northwest of the capital Stockholm and has had a big impact on the Swedens
-            import and export </h3>
-    </div>
-    <div>
-        <h4>Sigtuna used to be a big trading port with the goal out in the open world. After that it became the seat of
-            the first christian king Olof Skötkonung.The city has been marked by his presence and made a big impact on
-            the rest of the country as well. See the google maps icon below to see where Sigtuna is located!</h4>
-    </div>
-    <div>
-        <img id="homepage-image" src="assets/images/Sigtuna överblick.jpg" alt="A overview of Sigtuna">
-    </div>
+        </div>
+        <div class="flex-container">
+            <h2>This website can be used as your personal guide through Sigtuna. Find your point of interest and take it
+                from there!</h2>
+        </div>
+        <div>
+            <h3>The city is located slightly northwest of the capital Stockholm and has had a big impact on the Swedens
+                import and export </h3>
+        </div>
+        <div>
+            <h4>Sigtuna used to be a big trading port with the goal out in the open world. After that it became the seat
+                of
+                the first christian king Olof Skötkonung.The city has been marked by his presence and made a big impact
+                on
+                the rest of the country as well. See the google maps icon below to see where Sigtuna is located!</h4>
+        </div>
+        <div>
+            <img id="homepage-image" src="assets/images/Sigtuna överblick.jpg" alt="A overview of Sigtuna">
+        </div>
 
-</section>
+    </section>
 
 
-<section>
+    <section>
 
-</section>
-<section id="footer">
-    <footer>
-        <ul class="social-networks">
-            <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
-            </li>
-            <li>
-                <a href="https://twitter.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
-            </li>
-            <li>
-                <a href="https://youtube.com" target="_blank" rel="noopener"
-                    aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
-            </li>
-            <li>
-                <a href="https://www.google.com/maps/place/Sigtuna/@59.6121268,17.6537003,12z/data=!3m1!4b1!4m5!3m4!1s0x465fba50d00c2875:0x64aad071d7ca81fd!8m2!3d59.6191463!"
-                    target="_blank" rel="noopener" aria-label="Visit our Google page (opens in a new tab)"><i
-                        class="fa-solid fa-location-arrow"></i></a>
-            </li>
-        </ul>
-    </footer>
-</section>
-<!--Font awesome script -->
-<script src="https://fontawesome.com/icons/location-pin?s=solid"></script>
-<script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
+    </section>
+    <section id="footer">
+        <footer>
+            <ul class="social-networks">
+                <li>
+                    <a href="https://facebook.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Twitter page (opens in a new tab)"><i
+                            class="fab fa-twitter-square"></i></a>
+                </li>
+                <li>
+                    <a href="https://youtube.com" target="_blank" rel="noopener"
+                        aria-label="Visit our YouTube page (opens in a new tab)"><i
+                            class="fab fa-youtube-square"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.google.com/maps/place/Sigtuna/@59.6121268,17.6537003,12z/data=!3m1!4b1!4m5!3m4!1s0x465fba50d00c2875:0x64aad071d7ca81fd!8m2!3d59.6191463!"
+                        target="_blank" rel="noopener" aria-label="Visit our Google page (opens in a new tab)"><i
+                            class="fa-solid fa-location-arrow"></i></a>
+                </li>
+            </ul>
+        </footer>
+    </section>
+    <!--Font awesome script -->
+    <script src="https://fontawesome.com/icons/location-pin?s=solid"></script>
+    <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
