--- a/signup.html
+++ b/signup.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
     <header>
         <a href="index.html">
             <h2 id="logo">Sigtuna Swedens Oldest City</h2>
@@ -37,26 +38,25 @@
     </header>
 
     <body>
-        <table id="events">
+        <table id="events" class="grid-container">
             <tr>
-                <th>AM tour</th>
-                <th>PM tour</th>
-                <th>Contact</th>
-                <th>Point of interest</th>
+                <th class="grid-item1">AM tour</th>
+                <th class="grid-item1">PM tour</th>
+                <th class="grid-item2">Contact</th>
+                <th class="grid-item2">Point of interest</th>
             </tr>
             <tr>
-                <td>Important landmarks</td>
-                <td>Halfday tour</td>
-                <td>Tomas Blomgren</td>
-                <td>History tour</td>
+                <td class="grid-item1">Important landmarks</td>
+                <td class="grid-item1">Halfday tour</td>
+                <td class="grid-item2">Tomas Blomgren</td>
+                <td class="grid-item2">History tour</td>
             </tr>
             <tr>
-                <td>Mainstreet</td>
-                <td>Museum tour</td>
-                <td>Maria Svenson</td>
-                <td>Lakeview tour</td>
+                <td class="grid-item1">Mainstreet</td>
+                <td class="grid-item1">Museum tour</td>
+                <td class="grid-item2">Maria Svenson</td>
+                <td class="grid-item2">Lakeview tour</td>
             </tr>
-
         </table>
     </body>
 
