remaking one table into 2 separate tabels

--- a/signup.html
+++ b/signup.html
@@ -38,24 +38,34 @@
     </header>
 
     <body>
-        <table id="events" class="grid-container">
+        <table id="events">
             <tr>
-                <th class="grid-item1">AM tour</th>
-                <th class="grid-item1">PM tour</th>
-                <th class="grid-item2">Contact</th>
-                <th class="grid-item2">Point of interest</th>
+                <th>AM tour</th>
+                <th>PM tour</th>
             </tr>
             <tr>
-                <td class="grid-item1">Important landmarks</td>
-                <td class="grid-item1">Halfday tour</td>
-                <td class="grid-item2">Tomas Blomgren</td>
-                <td class="grid-item2">History tour</td>
+                <td>Important landmarks</td>
+                <td>Halfday tour</td>
             </tr>
             <tr>
-                <td class="grid-item1">Mainstreet</td>
-                <td class="grid-item1">Museum tour</td>
-                <td class="grid-item2">Maria Svenson</td>
-                <td class="grid-item2">Lakeview tour</td>
+                <td>Mainstreet</td>
+                <td>Museum tour</td>
+
+            </tr>
+        </table>
+        <br>
+        <table id="events2">
+            <tr>
+                <th>Contact</th>
+                <th>Points of interest</th>
+            </tr>
+            <tr>
+                <td>Tomas Blomgren</td>
+                <td>History tour</td>
+            </tr>
+            <tr>
+                <td>Maria Svenson</td>
+                <td>Lakeview tour</td>
             </tr>
         </table>
     </body>
