succefully created media queries for contact page

--- a/signup.html
+++ b/signup.html
@@ -38,36 +38,38 @@
     </header>
 
     <body>
-        <table id="events">
-            <tr>
-                <th>AM tour</th>
-                <th>PM tour</th>
-            </tr>
-            <tr>
-                <td>Important landmarks</td>
-                <td>Halfday tour</td>
-            </tr>
-            <tr>
-                <td>Mainstreet</td>
-                <td>Museum tour</td>
+        <section id="contactinfo">
+            <table id="events">
+                <tr>
+                    <th>AM tour</th>
+                    <th>PM tour</th>
+                </tr>
+                <tr>
+                    <td>Important landmarks</td>
+                    <td>Halfday tour</td>
+                </tr>
+                <tr>
+                    <td>Mainstreet</td>
+                    <td>Museum tour</td>
 
-            </tr>
-        </table>
-        <br>
-        <table id="events2">
-            <tr>
-                <th>Contact</th>
-                <th>Points of interest</th>
-            </tr>
-            <tr>
-                <td>Tomas Blomgren</td>
-                <td>History tour</td>
-            </tr>
-            <tr>
-                <td>Maria Svenson</td>
-                <td>Lakeview tour</td>
-            </tr>
-        </table>
+                </tr>
+            </table>
+            <br>
+            <table id="events2">
+                <tr>
+                    <th>Contact</th>
+                    <th>Points of interest</th>
+                </tr>
+                <tr>
+                    <td>Tomas Blomgren</td>
+                    <td>History tour</td>
+                </tr>
+                <tr>
+                    <td>Maria Svenson</td>
+                    <td>Lakeview tour</td>
+                </tr>
+            </table>
+        </section>
     </body>
 
     <section class="form-section">
