--- a/signup.html
+++ b/signup.html
@@ -15,26 +15,30 @@
 <body>
 
     <header>
+        <label for="menu-toggle">
+
+            <div class="menu-button">Menu</div>
+        </label>
+        <input type="checkbox" id="menu-toggle">
+        <!--Menu div-->
+        <nav class="control-me">
+            <ul id="menu">
+                <li>
+                    <a style="order: 1" href="index.html">Home</a>
+                </li>
+                <li>
+                    <a style="order: 2" href="gallery.html">Gallery</a>
+                </li>
+                <li>
+                    <a class="active" style="order: 3" href="signup.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
+        <!-- </div> -->
+        </section>
         <a href="index.html">
-            <h2 id="logo">Sigtuna Swedens Oldest City</h2>
-
-            <nav>
-                <ul id="menu">
-                    <li>
-                        <a class="active" href="signup.html">Contact</a>
-                    </li>
-
-                    <li>
-                        <a href="gallery.html">Gallery</a>
-                    </li>
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                </ul>
-            </nav>
-
+            <h1 id="logo">Sigtuna Swedens Oldest City</h1>
         </a>
-
     </header>
 
     <body>
