replacing sections withs divs to pass html validator

--- a/index.html
+++ b/index.html
@@ -12,58 +12,70 @@
 </head>
 
 <body class="flex-container">
-    <section class="top-nav">
+    <div class="top-nav">
+
         <header>
             <label for="menu-toggle">
-
-                <div class="menu-button">Menu</div>
+                <span class="menu-button">Menu</span>
             </label>
             <input type="checkbox" id="menu-toggle">
             <!--Menu div-->
             <nav class="control-me">
                 <ul id="menu">
                     <li>
-                        <a style="order: 1" href="index.html">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a style="order: 2" href="gallery.html">Gallery</a>
+                        <a href="gallery.html">Gallery</a>
                     </li>
                     <li>
-                        <a class="active" style="order: 3" href="signup.html">Contact</a>
+                        <a class="active" href="signup.html">Contact</a>
                     </li>
                 </ul>
             </nav>
             <!-- </div> -->
-    </section>
-    <a href="index.html">
-        <h1 id="logo">Sigtuna Swedens Oldest City</h1>
-    </a>
-    </header>
+
+
+            <a href="index.html">
+                <h1 id="logo">Sigtuna Swedens Oldest City</h1>
+            </a>
+
+        </header>
+    </div>
     <section id="home-text">
 
         <!--Homepage text-->
         <div class="flex-container">
-            <h2>This website can be used as your personal guide through Sigtuna. Find your point of interest and take it
+            <br>
+            <br>
+            <br>
+            <br>
+            <h2>This website can be used as your personal guide through Sigtuna. Find your point of interest and
+                take it
                 from there!</h2>
         </div>
         <div>
-            <h3>The city is located slightly northwest of the capital Stockholm and has had a big impact on the Swedens
+            <h3>The city is located slightly northwest of the capital Stockholm and has had a big impact on the
+                Swedens
                 import and export </h3>
         </div>
         <div>
-            <h4>Sigtuna used to be a big trading port with the goal out in the open world. After that it became the seat
+            <h4>Sigtuna used to be a big trading port with the goal out in the open world. After that it became the
+                seat
                 of
-                the first christian king Olof Skötkonung.The city has been marked by his presence and made a big impact
+                the first christian king Olof Skötkonung.The city has been marked by his presence and made a big
+                impact
                 on
-                the rest of the country as well. See the google maps icon below to see where Sigtuna is located!</h4>
+                the rest of the country as well. See the google maps icon below to see where Sigtuna is located!
+            </h4>
         </div>
         <div>
-            <img id="homepage-image" src="assets/images/Sigtuna överblick.jpg" alt="A overview of Sigtuna">
+            <img id="homepage-image" src="assets/images/Sigtuna-överblick.jpg" alt="A overview of Sigtuna">
         </div>
 
     </section>
 
-    <section id="footer">
+    <div id="footer">
         <footer>
             <ul class="social-networks">
                 <li>
@@ -87,7 +99,7 @@
                 </li>
             </ul>
         </footer>
-    </section>
+    </div>
     <!--Font awesome script -->
     <script src="https://fontawesome.com/icons/location-pin?s=solid"></script>
     <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
