--- a/signup.html
+++ b/signup.html
@@ -24,13 +24,13 @@
         <nav class="control-me">
             <ul id="menu">
                 <li>
-                    <a style="order: 1" href="index.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a style="order: 2" href="gallery.html">Gallery</a>
+                    <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
-                    <a class="active" style="order: 3" href="signup.html">Contact</a>
+                    <a class="active" href="signup.html">Contact</a>
                 </li>
             </ul>
         </nav>
