getting ready for submisson

--- a/signup.html
+++ b/signup.html
@@ -75,47 +75,44 @@
             </tr>
         </table>
     </div>
-</body>
+    <div class="form-section">
+        <form id="contact" method="POST" action="https://formdump.codeinstitute.net/" class="signup-form">
 
-<section class="form-section">
-    <form id="contact" method="POST" action="https://formdump.codeinstitute.net/" class="signup-form">
+            <label for="fname">First Name</label>
+            <input id="fname" name="first_name" type="text" required>
 
-        <label for="fname">First Name</label>
-        <input id="fname" name="first_name" type="text" required>
+            <label for="lname">Last Name</label>
+            <input id="lname" name="last_name" type="text" required>
 
-        <label for="lname">Last Name</label>
-        <input id="lname" name="last_name" type="text" required>
+            <label for="email">Email Address</label>
+            <input type="email" id="email" name="email_address" required>
 
-        <label for="email">Email Address</label>
-        <input type="email" id="email" name="email_address" required>
+            <input class="join-button" type="submit" value="Find your way around!">
+        </form>
+    </div>
+    <ul class="social-networks">
+        <li>
+            <a href="https://facebook.com" target="_blank" rel="noopener"
+                aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+        </li>
+        <li>
+            <a href="https://twitter.com" target="_blank" rel="noopener"
+                aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
+        </li>
+        <li>
+            <a href="https://youtube.com" target="_blank" rel="noopener"
+                aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
+        </li>
+        <li>
+            <a href="https://www.google.com/maps/place/Sigtuna/@59.6121268,17.6537003,12z/data=!3m1!4b1!4m5!3m4!1s0x465fba50d00c2875:0x64aad071d7ca81fd!8m2!3d59.6191463!"
+                target="_blank" rel="noopener" aria-label="Visit our Google page (opens in a new tab)"><i
+                    class="fa-solid fa-location-arrow"></i></a>
+        </li>
+    </ul>
 
-        <input class="join-button" type="submit" value="Find your way around!">
-    </form>
-
-</section>
-
-<ul class="social-networks">
-    <li>
-        <a href="https://facebook.com" target="_blank" rel="noopener"
-            aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
-    </li>
-    <li>
-        <a href="https://twitter.com" target="_blank" rel="noopener"
-            aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
-    </li>
-    <li>
-        <a href="https://youtube.com" target="_blank" rel="noopener"
-            aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
-    </li>
-    <li>
-        <a href="https://www.google.com/maps/place/Sigtuna/@59.6121268,17.6537003,12z/data=!3m1!4b1!4m5!3m4!1s0x465fba50d00c2875:0x64aad071d7ca81fd!8m2!3d59.6191463!"
-            target="_blank" rel="noopener" aria-label="Visit our Google page (opens in a new tab)"><i
-                class="fa-solid fa-location-arrow"></i></a>
-    </li>
-</ul>
-<!--Font awesome script -->
-<script src="https://fontawesome.com/icons/location-arrow?s=solid"></script>
-<script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
+    <!--Font awesome script -->
+    <script src="https://fontawesome.com/icons/location-arrow?s=solid"></script>
+    <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
