--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,7 @@
     <header>
         <label for="menu-toggle">
 
-            <div class="menu-button">Menu</div>
+            <span class="menu-button">Menu</span>
         </label>
         <input type="checkbox" id="menu-toggle">
         <!--Menu div-->
@@ -33,21 +33,20 @@
             </ul>
         </nav>
         <!-- </div> -->
-        </section>
         <a href="index.html">
             <h1 id="logo">Sigtuna Swedens Oldest City</h1>
         </a>
     </header>
-    <section id="photos">
-        <img src="assets/images/Ruin 1.jpg" alt="An old monastery ruin located in Sigtuna">
+    <div id="photos">
+        <img src="assets/images/Ruin-1.jpg" alt="An old monastery ruin located in Sigtuna">
         <img src="assets/images/Mariakyrkan.jpg" alt="Red christian church placed close to the town hall ">
-        <img src="assets/images/Klocktornet 2.jpg" alt="Old clocktower used to call for mass">
-        <img src="assets/images/Runsten 3.jpg" alt="Runic stone describing the person it was raised to">
-        <img src="assets/images/ruin 2.jpg" alt="Old monastery located on the cemetary grounds in Sigtuna">
-        <img src="assets/images/Runsten Sigtuna 1.jpg" alt="Runic stone placed close to a park">
-        <img src="assets/images/Stranpromenaden Stenar.jpg" alt="A Circle of small runic stones close to the lake">
-        <img src="assets/images/Översikt Sigtuna karta.jpg" alt="Overview of Sigtuna on the map">
-    </section>
+        <img src="assets/images/Klocktornet-2.jpg" alt="Old clocktower used to call for mass">
+        <img src="assets/images/Runsten-3.jpg" alt="Runic stone describing the person it was raised to">
+        <img src="assets/images/ruin-2.jpg" alt="Old monastery located on the cemetary grounds in Sigtuna">
+        <img src="assets/images/Runsten-Sigtuna-1.jpg" alt="Runic stone placed close to a park">
+        <img src="assets/images/Stranpromenaden-Stenar.jpg" alt="A Circle of small runic stones close to the lake">
+        <img src="assets/images/Översikt-Sigtuna-karta.jpg" alt="Overview of Sigtuna on the map">
+    </div>
     <footer>
 
         <ul class="social-networks">
